Bug 1428694 - Bail out from PresShell::Initialize if the pres shell is being destroyed in XBLConstructorRunner. r=tnikkel

MozReview-Commit-ID: 86Rq18OdZnJ